[gd_scene load_steps=4 format=3 uid="uid://3370efu28jlw"]

[ext_resource type="Script" path="res://scripts/baseEnemy.gd" id="1_0w4q6"]
[ext_resource type="Texture2D" uid="uid://dlitoocnow1hd" path="res://assets/icon.svg" id="1_cwva7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wussj"]
size = Vector2(124, 116)

[node name="Mob" type="Area2D" groups=["Enemies"]]
position = Vector2(0, -2)
collision_layer = 4
collision_mask = 10
script = ExtResource("1_0w4q6")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_wussj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_cwva7")

[node name="AttackSpeed" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="AttackSpeed" to="." method="_on_attack_speed_timeout"]
